--- a/app/src/main/res/layout/activity_ayat.xml
+++ b/app/src/main/res/layout/activity_ayat.xml
@@ -3,8 +3,8 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F9F9F9"
-    android:padding="16dp">
+    android:background="@color/black"
+    android:padding="1dp">
 
     <!-- HEADER: Info Surat -->
     <LinearLayout
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:gravity="center_horizontal"
+        android:layout_marginTop="8dp"
         android:paddingBottom="16dp">
 
         <TextView
@@ -21,7 +22,7 @@
             android:text="Surat Al-Fatihah"
             android:textSize="24sp"
             android:textStyle="bold"
-            android:textColor="#2C3E50" />
+            android:textColor="@color/white" />
 
         <TextView
             android:id="@+id/suratInfo"
