--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,60 +1,19 @@
-<?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".activity.MainActivity">
+    android:layout_height="match_parent">
 
-    <ImageView
+    <FrameLayout
+        android:id="@+id/fragment_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="centerCrop"
-        android:src="@drawable/masjid"
-        android:alpha="0.4"/>
+        android:layout_above="@id/bottom_navigation" />
 
-    <ScrollView
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="24dp"
-        android:fillViewport="true">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:gravity="center">
-
-            <ImageView
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:src="@drawable/logo_masjid"
-                android:layout_marginBottom="24dp"/>
-
-            <Button
-                android:id="@+id/btAlquran"
-                android:text="BACA QUR'AN"
-                style="@style/CustomButtonStyle" />
-            <Button
-
-                android:text="KEGIATAN MASJID"
-                style="@style/CustomButtonStyle" />
-            <Button
-                android:text="INFORMASI MASJID"
-                style="@style/CustomButtonStyle" />
-            <Button
-                android:id="@+id/btJadwalSholat"
-                android:text="JADWAL SHOLAT"
-                style="@style/CustomButtonStyle" />
-            <Button
-                android:text="PENGATURAN"
-                style="@style/CustomButtonStyle" />
-
-
-        </LinearLayout>
-    </ScrollView>
-
-
-</FrameLayout>
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:background="#FFFEFE"
+        app:menu="@menu/bottom_nav_menu" />
+</RelativeLayout>
