--- a/app/src/main/res/layout/item_ayat.xml
+++ b/app/src/main/res/layout/item_ayat.xml
@@ -23,7 +23,7 @@
             android:layout_gravity="center"
             android:text="1"
             android:textSize="14sp"
-            android:textColor="#000000"
+            android:textColor="@color/white"
             android:textStyle="bold"/>
     </FrameLayout>
 
@@ -37,6 +37,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="24sp"
+            android:textColor="@color/white"
             android:layout_marginEnd="10dp"
             android:layout_marginBottom="7dp"
             android:text="الفاتحالفاتحالفاتحالفاتحالفاتحالفاتحالفاتح"/>
@@ -46,6 +47,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="16sp"
+            android:textColor="@color/white"
             android:layout_marginBottom="8dp"
             android:textStyle="italic"
             android:text="al-hamdulillahirobbialaminn"/>
@@ -54,6 +56,7 @@
             android:id="@+id/arti"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="@color/white"
             android:textSize="16sp"
             android:text="Dengan Menyebut Nama Allah Yang maha pengasih lagi maha penyayang"/>
     </LinearLayout>
