--- a/app/src/main/res/drawable/border_menu.xml
+++ b/app/src/main/res/drawable/border_menu.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <solid android:color="#D9D9D9" />
+    <solid android:color="@color/BiruPalingMuda" />
     <stroke
         android:width="1dp"
-        android:color="#FFFFFF" /> <!-- Border warna hitam untuk kontras -->
+        android:color="@color/BiruPalingMuda" /> <!-- Border warna hitam untuk kontras -->
 
 </shape>
