--- a/app/src/main/res/layout/fragment_surah.xml
+++ b/app/src/main/res/layout/fragment_surah.xml
@@ -3,13 +3,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragment.SurahFragment">
+
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:listitem="@layout/item_surah"
-        android:paddingTop="4dp"/>
+        tools:listitem="@layout/item_surah" />
 
 </FrameLayout>
