--- a/app/src/main/res/layout/item_activity.xml
+++ b/app/src/main/res/layout/item_activity.xml
@@ -109,7 +109,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="4dp"
                     android:ellipsize="end"
-                    android:fontFamily="sans-serif-medium"
+                    android:fontFamily="@font/kurale_reguler"
                     android:maxLines="1"
                     android:text="Pengajian Ahad Pagi"
                     android:textColor="@color/black"
@@ -123,6 +123,7 @@
                     android:layout_weight="1"
                     android:ellipsize="end"
                     android:lineSpacingExtra="2dp"
+                    android:fontFamily="@font/kurale_reguler"
                     android:maxLines="3"
                     android:text="Pengajian ahad adalah acara yang diselenggarakan setiap minggu sekali dan dihadiri oleh masyarakat sekitar ponorogo."
                     android:textColor="@android:color/darker_gray"
