--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,137 +1,195 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/white"
     android:orientation="vertical">
-<androidx.core.widget.NestedScrollView
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-        android:orientation="vertical">
-
-        <ImageView
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="300dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/masjid_setengah" />
+            android:layout_height="wrap_content"
 
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:orientation="vertical">
 
-            <LinearLayout
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/masjid_setengah" />
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginEnd="10dp"
+                    android:gravity="center_horizontal"
+                    android:orientation="horizontal">
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <LinearLayout
+                            android:id="@+id/btnQuran"
+                            android:layout_width="48dp"
+                            android:layout_height="48dp"
+                            android:layout_marginStart="20dp"
+                            android:layout_marginEnd="20dp"
+                            android:background="@drawable/border_menu"
+                            android:gravity="center"
+                            android:orientation="vertical">
+
+                            <LinearLayout
+                                android:layout_width="37dp"
+                                android:layout_height="37dp"
+                                android:background="@drawable/img"
+                                android:contentDescription="icon location" />
+
+                        </LinearLayout>
+
+                        <TextView
+                            style="@style/TextAppearance.App.LabelMedium"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Al-Quran"
+                            android:gravity="center_horizontal"
+                            android:textColor="@color/black" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <LinearLayout
+                            android:layout_width="48dp"
+                            android:layout_height="48dp"
+                            android:layout_marginStart="20dp"
+                            android:layout_marginEnd="20dp"
+                            android:background="@drawable/border_menu"
+                            android:gravity="center">
+
+                            <LinearLayout
+                                android:layout_width="27dp"
+                                android:layout_height="50dp"
+                                android:layout_marginTop="4dp"
+                                android:background="@drawable/tasbih"
+                                android:contentDescription="icon location" />
+                        </LinearLayout>
+                        <TextView
+                            style="@style/TextAppearance.App.LabelMedium"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Tasbih"
+                            android:gravity="center_horizontal"
+                            android:textColor="@color/black" />
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+                    <LinearLayout
+                        android:layout_width="48dp"
+                        android:layout_height="48dp"
+                        android:layout_marginStart="20dp"
+                        android:layout_marginEnd="20dp"
+                        android:background="@drawable/border_menu"
+                        android:gravity="center">
+
+                        <LinearLayout
+                            android:layout_width="37dp"
+                            android:layout_height="37dp"
+                            android:background="@drawable/schedule"
+                            android:contentDescription="icon location" />
+                    </LinearLayout>
+                    <TextView
+                        style="@style/TextAppearance.App.LabelMedium"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Jadwal Sholat"
+                        android:gravity="center_horizontal"
+                        android:textColor="@color/black" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+                    <LinearLayout
+                        android:layout_width="48dp"
+                        android:layout_height="48dp"
+                        android:background="@drawable/border_menu"
+                        android:gravity="center"
+                        android:layout_marginStart="20dp"
+                        android:layout_marginEnd="20dp"
+                        android:orientation="vertical">
+
+                        <LinearLayout
+                            android:layout_width="60dp"
+                            android:layout_height="70dp"
+                            android:backgroundTint="#6DA5CB"
+                            android:background="@drawable/ic_kabah"
+                            android:contentDescription="icon kabah" />
+                    </LinearLayout>
+                        <TextView
+                            style="@style/TextAppearance.App.LabelMedium"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Kiblat"
+                            android:gravity="center_horizontal"
+                            android:textColor="@color/black" />
+                    </LinearLayout>
+                </LinearLayout>
+            </FrameLayout>
+
+            <TextView
+                style="@style/TextAppearance.App.BodyMedium"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="16dp"
+                android:text="Berita Terbaru"
+                android:textColor="@color/black" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginEnd="10dp"
-                android:gravity="center_horizontal"
-                android:orientation="horizontal">
+                android:layout_marginStart="8dp"
+                android:orientation="horizontal" />
 
-                <LinearLayout
-                    android:id="@+id/btnQuran"
-                    android:layout_width="62dp"
-                    android:layout_height="62dp"
-                    android:layout_marginEnd="26dp"
-                    android:background="@drawable/border_menu"
-                    android:gravity="center">
+            <TextView
+                style="@style/TextAppearance.App.BodyMedium"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="8dp"
+                android:text="Kegiatan Terdekat"
+                android:textColor="@color/black" />
 
-                    <LinearLayout
-                        android:layout_width="52dp"
-                        android:layout_height="52dp"
-                        android:background="@drawable/img"
-                        android:contentDescription="icon location" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="62dp"
-                    android:layout_height="62dp"
-                    android:layout_marginEnd="26dp"
-                    android:background="@drawable/border_menu"
-                    android:gravity="center">
-
-                    <LinearLayout
-                        android:layout_width="37dp"
-                        android:layout_height="65dp"
-                        android:layout_marginTop="4dp"
-                        android:background="@drawable/tasbih"
-                        android:contentDescription="icon location" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="62dp"
-                    android:layout_height="62dp"
-                    android:layout_marginEnd="26dp"
-                    android:background="@drawable/border_menu"
-                    android:gravity="center">
-
-                    <LinearLayout
-                        android:layout_width="52dp"
-                        android:layout_height="52dp"
-                        android:background="@drawable/schedule"
-                        android:contentDescription="icon location" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="62dp"
-                    android:layout_height="62dp"
-                    android:background="@drawable/border_menu"
-                    android:gravity="center"
-                    android:orientation="vertical">
-
-                    <LinearLayout
-                        android:layout_width="52dp"
-                        android:layout_height="36dp"
-                        android:background="@drawable/location"
-                        android:contentDescription="icon location" />
-                </LinearLayout>
-            </LinearLayout>
-        </FrameLayout>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Berita Terbaru"
-        android:layout_marginTop="8dp"
-        style="@style/TextAppearance.App.BodyMedium"
-        android:textColor="@color/black"
-        android:layout_marginStart="24dp"/>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:orientation="horizontal"
-         />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Kegiatan Terdekat"
-        android:textColor="@color/black"
-        style="@style/TextAppearance.App.BodyMedium"
-        android:layout_marginTop="8dp"
-        android:layout_marginStart="24dp"/>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:orientation="vertical"/>
-    </LinearLayout>
-</androidx.core.widget.NestedScrollView>
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerView2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:nestedScrollingEnabled="false"
+                android:orientation="vertical" />
+        </LinearLayout>
+    </ScrollView>
 </LinearLayout>
 
