--- a/app/src/main/res/layout/item_surah.xml
+++ b/app/src/main/res/layout/item_surah.xml
@@ -1,112 +1,131 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/no_surah"
-    android:layout_width="match_parent"
-    android:layout_height="67dp"
-    android:layout_margin="2dp"
-    android:orientation="horizontal"
-    android:baselineAligned="false"
-    android:background="@drawable/border_ismu_surah"
-    android:padding="8dp">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:background="@color/white">
 
-    <!-- Frame untuk angka surah -->
-    <FrameLayout
-        android:layout_width="60dp"
-        android:layout_height="match_parent">
-
-        <ImageView
-            android:id="@+id/bg_no_surah"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="6dp"
-            android:scaleType="centerInside"
-            android:src="@drawable/no_surah1"
-            android:contentDescription="@null" />
-
-        <TextView
-            android:id="@+id/numberText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:textSize="12sp"
-            android:textColor="#FFFFFF"
-            tools:text="1" />
-    </FrameLayout>
-
-    <!-- Info surah -->
     <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
+        android:id="@+id/no_surah"
+        android:layout_width="match_parent"
+        android:layout_height="67dp"
+        android:baselineAligned="false"
         android:orientation="horizontal"
-        android:gravity="center_vertical"
-        android:paddingStart="8dp"
-        android:paddingEnd="8dp">
+        android:padding="8dp">
 
-        <!-- Nama dan kota -->
+        <!-- Frame untuk angka surah -->
+        <FrameLayout
+            android:layout_width="60dp"
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:id="@+id/bg_no_surah"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:contentDescription="@null"
+                android:padding="6dp"
+                android:scaleType="centerInside"
+                android:src="@drawable/no_surah1" />
+
+            <TextView
+                android:id="@+id/numberText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:textColor="@color/black"
+                android:textSize="10sp"
+                android:fontFamily="@font/kurale_reguler"
+                tools:text="1" />
+        </FrameLayout>
+
+        <!-- Info surah -->
         <LinearLayout
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:orientation="vertical">
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp">
 
-            <TextView
-                android:id="@+id/namaSurahText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="16sp"
-                android:textColor="#FFFFFF"
-                tools:text="Al-Fatihah" />
-
+            <!-- Nama dan kota -->
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:layout_weight="1"
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/kotaText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="12sp"
-                android:textColor="#C7C2C2"
-                tools:text="Mecca" />
-            <TextView
-                android:id="@+id/penghalang"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="12sp"
-                android:textColor="#C7C2C2"
-                tools:text=" | " />
                 <TextView
-                android:id="@+id/jumlahayat"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="12sp"
-                android:textColor="#C7C2C2"
-                tools:text="7" />
-                <TextView
-                android:id="@+id/tvayat"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="12sp"
-                android:textColor="#C7C2C2"
-                tools:text=" Ayat" />
+                    android:id="@+id/namaSurahText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/kurale_reguler"
+                    android:textColor="@color/black"
+                    android:textSize="16sp"
+                    tools:text="Al-Fatihah" />
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/kotaText"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/kurale_reguler"
+                        android:textColor="@color/BiruTua"
+                        android:textSize="12sp"
+                        tools:text="Mecca" />
+
+                    <TextView
+                        android:id="@+id/penghalang"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/BiruTua"
+                        android:textSize="12sp"
+                        tools:text=" | " />
+
+                    <TextView
+                        android:id="@+id/jumlahayat"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/BiruTua"
+                        android:textSize="12sp"
+                        android:fontFamily="@font/kurale_reguler"
+                        tools:text="7" />
+
+                    <TextView
+                        android:id="@+id/tvayat"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/kurale_reguler"
+                        android:textColor="@color/BiruTua"
+                        android:textSize="12sp"
+                        tools:text=" Ayat" />
+
+                </LinearLayout>
             </LinearLayout>
+
+            <!-- Arab -->
+            <TextView
+                android:id="@+id/arabText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:paddingStart="8dp"
+                android:paddingEnd="8dp"
+                android:textColor="@color/black"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                tools:text="الفاتحة" />
         </LinearLayout>
 
-        <!-- Arab -->
-        <TextView
-            android:id="@+id/arabText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            android:textColor="#FFFFFF"
-            android:gravity="center_vertical"
-            android:paddingStart="8dp"
-            android:paddingEnd="8dp"
-            tools:text="الفاتحة" />
     </LinearLayout>
-</LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+
+        android:background="@drawable/border_ismu_surah" />
+</RelativeLayout>
