--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -3,4 +3,12 @@
     <style name="Base.Theme.MasjidAnnur" parent="Theme.Material3.DayNight.NoActionBar">
 
     </style>
+    <style name="Theme.MasjidAnnur" parent="Base.Theme.MasjidAnnur" >
+        <item name="colorSurface">@color/BiruTua</item>
+        <item name="colorPrimary">@color/white</item>
+        <item name="colorOnSurface">@color/white</item>
+        <!--        <item name="colorOnPrimary">@color/BiruTua</item>-->
+        <!--        <item name="colorOnBackground">@color/BiruTua</item>-->
+        <!--        <item name="colorOnPrimaryContainer">@color/BiruTua</item>-->
+    </style>
 </resources>
