--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,5 +4,8 @@
 
     </style>
 
-    <style name="Theme.MasjidAnnur" parent="Base.Theme.MasjidAnnur" />
+    <style name="Theme.MasjidAnnur" parent="Base.Theme.MasjidAnnur" >
+
+    </style>
+
 </resources>
