--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -77,6 +77,7 @@
                         android:orientation="vertical">
 
                         <LinearLayout
+                            android:id="@+id/btnTasbih"
                             android:layout_width="48dp"
                             android:layout_height="48dp"
                             android:layout_marginStart="20dp"
