--- a/app/src/main/res/layout/activity_kiblat.xml
+++ b/app/src/main/res/layout/activity_kiblat.xml
@@ -40,7 +40,7 @@
                 style="@style/TextAppearance.App.TitleMedium"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Jadwal Sholat"
+                android:text="Kiblat"
                 android:textColor="@color/black"
                 android:textStyle="bold" />
         </LinearLayout>
