--- a/app/src/main/res/layout/activity_ayat.xml
+++ b/app/src/main/res/layout/activity_ayat.xml
@@ -40,6 +40,22 @@
             android:layout_height="2dp"
             android:layout_marginTop="8dp"
             android:background="#2C3E50"/>
+        <LinearLayout
+            android:id="@+id/btnBback"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:background="@drawable/border_menu"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="20dp"
+                android:layout_height="12dp"
+                android:contentDescription="Back"
+                android:background="@drawable/ic_arrow_back" />
+        </LinearLayout>
     </LinearLayout>
 
     <!-- DAFTAR AYAT: RecyclerView -->
