--- a/app/src/main/res/layout/activity_bantuan.xml
+++ b/app/src/main/res/layout/activity_bantuan.xml
@@ -66,7 +66,7 @@
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:src="@drawable/ic_info"
-            android:tint="#FBC02D"
+            app:tint="#FBC02D"
             android:contentDescription="Information"
             android:layout_marginEnd="8dp" />
 
@@ -106,7 +106,7 @@
         android:hint="Tuliskan topik"
         android:textColor="@color/black"
         style="@style/TextAppearance.App.BodyMedium"
-        android:padding="12dp"
+        android:padding="14dp"
         android:inputType="text"
         android:layout_marginBottom="16dp" />
 
@@ -125,7 +125,7 @@
         android:background="@drawable/edittext_topik"
         android:hint="Tuliskan kategori"
         style="@style/TextAppearance.App.BodyMedium"
-        android:padding="12dp"
+        android:padding="14dp"
         android:textColor="@color/black"
         android:inputType="text"
         android:layout_marginBottom="16dp" />
