--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -148,7 +148,7 @@
                 android:layout_marginStart="16dp"
                 android:text="Bahasa"
                 android:textColor="@android:color/black"
-                style="@style/TextAppearance.App.LabelMedium"
+                style="@style/TextAppearance.App.BodyLarge"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/arrowBahasa"
                 app:layout_constraintStart_toEndOf="@id/iconBahasa"
@@ -193,7 +193,7 @@
                 android:layout_marginStart="16dp"
                 android:text="Bantuan"
                 android:textColor="@android:color/black"
-                style="@style/TextAppearance.App.LabelMedium"
+                style="@style/TextAppearance.App.BodyLarge"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/arrowBantuan"
                 app:layout_constraintStart_toEndOf="@id/iconBantuan"
@@ -238,7 +238,7 @@
                 android:layout_marginStart="16dp"
                 android:text="Hubungi Kami"
                 android:textColor="@android:color/black"
-                style="@style/TextAppearance.App.LabelMedium"
+                style="@style/TextAppearance.App.BodyLarge"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/arrowHubungiKami"
                 app:layout_constraintStart_toEndOf="@id/iconHubungiKami"
@@ -283,7 +283,7 @@
                 android:layout_marginStart="16dp"
                 android:text="Tentang Aplikasi"
                 android:textColor="@android:color/black"
-                style="@style/TextAppearance.App.LabelMedium"
+                style="@style/TextAppearance.App.BodyLarge"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/arrowTentangAplikasi"
                 app:layout_constraintStart_toEndOf="@id/iconTentangAplikasi"
@@ -328,7 +328,7 @@
                 android:layout_marginStart="16dp"
                 android:text="Syarat &amp; Ketentuan"
                 android:textColor="@android:color/black"
-                style="@style/TextAppearance.App.LabelMedium"
+                style="@style/TextAppearance.App.BodyLarge"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/arrowSyaratKetentuan"
                 app:layout_constraintStart_toEndOf="@id/iconSyaratKetentuan"
@@ -374,7 +374,7 @@
                 android:layout_marginStart="16dp"
                 android:text="FAQ"
                 android:textColor="@android:color/black"
-                style="@style/TextAppearance.App.LabelMedium"
+                style="@style/TextAppearance.App.BodyLarge"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/arrowFAQ"
                 app:layout_constraintStart_toEndOf="@id/iconFAQ"
