--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,11 @@
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
         android:layout_alignParentBottom="true"
+        android:padding="8dp"
+        app:labelVisibilityMode="labeled"
+        app:itemIconTint="@color/BiruTua"
+        app:itemTextColor="@color/BiruTua"
+        app:itemTextAppearanceActive="@style/BottomNavigationView.ActiveText"
         app:menu="@menu/bottom_nav_menu" />
 </RelativeLayout>
