--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -5,12 +5,12 @@
         android:title="Home" />
     <item
         android:id="@+id/activity"
-        android:icon="@drawable/ic_activity"
-        android:title="Activity" />
+        android:icon="@drawable/ic_kegiatan"
+        android:title="Kegiatan" />
     <item
         android:id="@+id/news"
-        android:icon="@drawable/ic_news"
-        android:title="News" />
+        android:icon="@drawable/ic_saldo"
+        android:title="Saldo" />
     <item
         android:id="@+id/profile"
         android:icon="@drawable/ic_profile"
