--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,14 +1,15 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
-    <style name="Base.Theme.MasjidAnnur" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.MasjidAnnur" parent="Theme.MaterialComponents.Light.NoActionBar">
 
     </style>
-    <style name="Theme.MasjidAnnur" parent="Base.Theme.MasjidAnnur" >
-        <item name="colorSurface">@color/BiruTua</item>
-        <item name="colorPrimary">@color/white</item>
-        <item name="colorOnSurface">@color/white</item>
-        <!--        <item name="colorOnPrimary">@color/BiruTua</item>-->
-        <!--        <item name="colorOnBackground">@color/BiruTua</item>-->
-        <!--        <item name="colorOnPrimaryContainer">@color/BiruTua</item>-->
+
+    <style name="Theme.MasjidAnnur" parent="Base.Theme.MasjidAnnur">
+        <item name="colorSurface">@color/white</item>
+        <item name="colorPrimary">@color/BiruTua</item>
+        <item name="colorOnSurface">@color/BiruTua</item>
+        <item name="colorOnPrimary">@color/BiruTua</item>
+        <item name="colorOnBackground">@color/BiruTua</item>
+        <item name="colorOnPrimaryContainer">@color/BiruTua</item>
     </style>
 </resources>
