--- a/app/src/main/res/layout/fragment_juz.xml
+++ b/app/src/main/res/layout/fragment_juz.xml
@@ -9,7 +9,7 @@
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:listitem="@layout/item_juz"
-        android:paddingTop="4dp"/>
+        android:paddingTop="4dp"
+        tools:listitem="@layout/item_juz" />
 
 </FrameLayout>
