--- a/app/src/main/res/layout/item_juz.xml
+++ b/app/src/main/res/layout/item_juz.xml
@@ -4,11 +4,10 @@
     android:id="@+id/no_surah"
     android:layout_width="match_parent"
     android:layout_height="67dp"
-    android:layout_margin="2dp"
+    android:background="@color/white"
     android:orientation="horizontal"
-    android:baselineAligned="false"
-    android:background="@drawable/border_ismu_surah"
-    android:padding="8dp">
+    android:padding="8dp"
+    android:baselineAligned="false">
 
     <!-- Frame untuk angka surah -->
     <FrameLayout
@@ -21,15 +20,16 @@
             android:layout_height="match_parent"
             android:padding="6dp"
             android:scaleType="centerInside"
-            android:src="@drawable/no_surah"
+            android:src="@drawable/no_surah1"
             android:contentDescription="@null" />
 
         <TextView
-            android:id="@+id/noText"
+            android:id="@+id/noJuz"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:textSize="14sp"
+            android:textSize="12sp"
+            android:fontFamily="@font/kurale_reguler"
             android:textColor="@color/black"
             tools:text="1" />
     </FrameLayout>
@@ -58,7 +58,7 @@
                 android:textSize="16sp"
                 android:textColor="@color/black"
                 android:fontFamily="@font/kurale_reguler"
-                tools:text="Al-Fatihah" />
+                tools:text="Juz 1" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -66,33 +66,48 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/kotaText"
+                    android:id="@+id/awalAyatJuz"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="12sp"
-                    android:textColor="#666666"
-                    tools:text="Mecca" />
+                    android:fontFamily="@font/kurale_reguler"
+                    android:layout_marginEnd="2dp"
+                    android:textColor="@color/BiruTua"
+                    tools:text="Al-Fatihah" />
+
                 <TextView
-                    android:id="@+id/penghalang"
+                    android:id="@+id/noAyatt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/BiruTua"
+                    android:fontFamily="@font/kurale_reguler"
                     android:textSize="12sp"
-                    android:textColor="#666666"
-                    tools:text=" | " />
+                    tools:text="1" />
+
                 <TextView
-                    android:id="@+id/jumlahayat"
+                    android:id="@+id/strip"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
+                    android:textColor="@color/BiruTua"
                     android:textSize="12sp"
-                    android:textColor="#666666"
-                    tools:text="7" />
+                    tools:text=" - " />
                 <TextView
-                    android:id="@+id/tvayat"
+                    android:id="@+id/akhirAyatJuz"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="12sp"
-                    android:textColor="#666666"
-                    tools:text=" Ayat" />
+                    android:fontFamily="@font/kurale_reguler"
+                    android:layout_marginEnd="2dp"
+                    android:textColor="@color/BiruTua"
+                    tools:text="Al-Baqarah" />
+                <TextView
+                    android:id="@+id/noAyatAkhir"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="12sp"
+                    android:fontFamily="@font/kurale_reguler"
+                    android:textColor="@color/BiruTua"
+                    tools:text="141" />
 
             </LinearLayout>
         </LinearLayout>
